Fix invisible link color

--- a/Resources/private/scss/lbd/_misc.scss
+++ b/Resources/private/scss/lbd/_misc.scss
@@ -5,10 +5,7 @@ body,
     position: relative;
 }
 a{
-  color: $info-color;
-
   &:hover, &:focus{
-     color: $info-states-color;
      text-decoration: none;
   }
 }
